# LimeVideoSDK

./: .gitattribute  .gitignore  LICENSE.txt  LimeVideoSDK.sln  README.html  README.md  appveyor.yml  hiddensamples.html  index.html  index.json  linksinc.html  manifest.json  toc.html  xrefmap.yml
api/: CatLibrary.Cat-2.html  CatLibrary.CatException-1.html  CatLibrary.Complex-2.html  CatLibrary.FakeDelegate-1.html  CatLibrary.IAnimal.html  CatLibrary.ICat.html  CatLibrary.ICatExtension.html  CatLibrary.MRefDelegate-3.html  CatLibrary.MRefNormalDelegate.html  CatLibrary.Tom.html  CatLibrary.TomFromBaseClass.html  CatLibrary.html  Decoder1.Program.html  Decoder1.html  LimeVideoSDK.Benchmark.BenchmarkTimer.html  LimeVideoSDK.Benchmark.BigMemSafeBuffer.html  LimeVideoSDK.Benchmark.html  LimeVideoSDK.CPUConvertResize.NV12FromXXXXConverter.html  LimeVideoSDK.CPUConvertResize.NV12FromXXXXLowLevelConverter.html  LimeVideoSDK.CPUConvertResize.NV12Resizer.html  LimeVideoSDK.CPUConvertResize.NV12ToXXXXConverter.html  LimeVideoSDK.CPUConvertResize.NV12ToXXXXLowLevelConverter.html  LimeVideoSDK.CPUConvertResize.NV12UnsafeNativeMethods.html  LimeVideoSDK.CPUConvertResize.NativeResizeConvertStatus.html  LimeVideoSDK.CPUConvertResize.NativeWidthHeight.html  LimeVideoSDK.CPUConvertResize.NativeXY.html  LimeVideoSDK.CPUConvertResize.html  LimeVideoSDK.QuickSync.BitStreamChunk.html  LimeVideoSDK.QuickSync.ConfirmQuickSyncReadiness.html  LimeVideoSDK.QuickSync.DecoderShared.html  LimeVideoSDK.QuickSync.EncoderShared.html  LimeVideoSDK.QuickSync.ExtensionMethods.html  LimeVideoSDK.QuickSync.FastMemcpyMemmove.html  LimeVideoSDK.QuickSync.ILowLevelDecoder.html  LimeVideoSDK.QuickSync.ILowLevelEncoder.html  LimeVideoSDK.QuickSync.LowLevelDecoderCSharp.html  LimeVideoSDK.QuickSync.LowLevelDecoderNative.html  LimeVideoSDK.QuickSync.LowLevelEncoderCSharp.html  LimeVideoSDK.QuickSync.LowLevelEncoderNative.html  LimeVideoSDK.QuickSync.LowLevelTranscoderCSharp.html  (+152 more)
articles/: csharp_coding_standards.html  docfx_getting_started.html  engineering_guidelines.html  samples.html
docfx_project/: docfx.json  filterConfig.yml  handlinks.xref  hiddensamples.md  index.md  toc.yml
docfx_project.old/: docfx.json
docfx_project.old2/: docfx.json  index.md  toc.yml
docfx_project.old2/reference/: reference.md
docfx_project.old2/restapi/: comingsoon.md
docfx_project.old2/samples/: samples.md  toc.yml
docfx_project/api/: .manifest  Decoder1.Program.yml  Decoder1.yml  LimeVideoSDKQuickSync.BenchmarkTimer.yml  LimeVideoSDKQuickSync.BigMemSafeBuffer.yml  LimeVideoSDKQuickSync.BitStreamChunk.yml  LimeVideoSDKQuickSync.BufferId.yml  LimeVideoSDKQuickSync.ChromaFormat.yml  LimeVideoSDKQuickSync.CodecId.yml  LimeVideoSDKQuickSync.CustomMemId.yml  LimeVideoSDKQuickSync.DecoderShared.yml  LimeVideoSDKQuickSync.EncoderShared.yml  LimeVideoSDKQuickSync.ExtensionMethods.yml  LimeVideoSDKQuickSync.FastMemcpyMemmove.yml  LimeVideoSDKQuickSync.FourCC.yml  LimeVideoSDKQuickSync.FrameMemoryType.yml  LimeVideoSDKQuickSync.ILowLevelDecoder.yml  LimeVideoSDKQuickSync.ILowLevelEncoder.yml  LimeVideoSDKQuickSync.IOPattern.yml  LimeVideoSDKQuickSync.LimeVideoSDKQuickSyncException.yml  LimeVideoSDKQuickSync.LowLevelDecoderCSharp.yml  LimeVideoSDKQuickSync.LowLevelDecoderNative.yml  LimeVideoSDKQuickSync.LowLevelEncoderCSharp.yml  LimeVideoSDKQuickSync.LowLevelEncoderNative.yml  LimeVideoSDKQuickSync.LowLevelTranscoderCSharp.yml  LimeVideoSDKQuickSync.NV12FrameWriter.yml  LimeVideoSDKQuickSync.NV12FromXXXXConverter.yml  LimeVideoSDKQuickSync.NV12FromXXXXLowLevelConverter.yml  LimeVideoSDKQuickSync.NV12Resizer.yml  LimeVideoSDKQuickSync.NV12ToXXXXConverter.yml  LimeVideoSDKQuickSync.NV12ToXXXXLowLevelConverter.yml  LimeVideoSDKQuickSync.NV12UnsafeNativeMethods.yml  LimeVideoSDKQuickSync.NativeLLDecoderUnsafeNativeMethods.yml  LimeVideoSDKQuickSync.NativeLLEncoderUnsafeNativeMethods.yml  LimeVideoSDKQuickSync.NativeResizeConvertStatus.yml  LimeVideoSDKQuickSync.NativeWidthHeight.yml  LimeVideoSDKQuickSync.NativeXY.yml  LimeVideoSDKQuickSync.NullStream.yml  LimeVideoSDKQuickSync.PicStruct.yml  LimeVideoSDKQuickSync.PreReadLargeMemoryStream.yml  (+50 more)
docfx_project/articles/: samples.md  toc.md
docfx_project/reference/: bitstreams.md  fourcc.conversion.md  frame.format.conversion.md  imsdk.docs.md  imsdk.md  linux.md  reference.md  resizing.md  software.fallback.md  toc.yml
docfx_project/restapi/: toc.yml
docfx_project/samples/: samples.md  toc.yml
docs/: index.html  index.json  manifest.json  xrefmap.yml
docs/api/: Decoder1.Program.html  Decoder1.html  LimeVideoSDKQuickSync.BenchmarkTimer.html  LimeVideoSDKQuickSync.BigMemSafeBuffer.html  LimeVideoSDKQuickSync.BitStreamChunk.html  LimeVideoSDKQuickSync.BufferId.html  LimeVideoSDKQuickSync.ChromaFormat.html  (+80 more)
dotnet/: LimeVideoSDK.sln  Readme.txt
lib/src/: BUILD.txt  CMakeLists.txt  winbuild.bat
lib/src/cmake/: FindDirectX.cmake
lib/src/imsdk.dispatcher/include/: mfxdefs.h  mfxdispatcherprefixedfunctions.h  mfxvideo++.h
lib/src/imsdk.dispatcher/opensource/mfx_dispatch/: CMakeLists.txt
lib/src/imsdk.dispatcher/opensource/mfx_dispatch/include/: mfx_plugin_cfg_parser.h
lib/src/imsdk.dispatcher/opensource/mfx_dispatch/src/: main.cpp  mfx_library_iterator_linux.cpp  mfx_load_dll.cpp  mfx_load_dll_linux.cpp  mfx_plugin_cfg_parser.cpp
lib/src/imsdk.samples/samples/sample_common/include/: decode_render.h  xigfx_s3dcontrol.h
lib/src/imsdk.samples/samples/sample_common/src/: d3d_allocator.cpp  d3d_device.cpp  sysmem_allocator.cpp
lib/src/src/: _CPPCLI.cpp  _ColorConversions.cpp  _ColorConversions.h  _VideoAccelerationSupport.cpp  _VideoAccelerationSupport.h  _dummymain.cpp  _resampler.cpp  _resampler.h  exports_FourCCResizeConvert.def  exports_limevideosdk.def  xigfx_s3dcontrol.h
reference/: bitstreams.html  fourcc.conversion.html  frame.format.conversion.html  imsdk.docs.html  imsdk.html  linux.html  reference.html  resizing.html  software.fallback.html  toc.html
restapi/: comingsoon.html  contacts.html  petstore.html  toc.html
samples/: samples.html  toc.html
(+72 files in other folders)
